# main-blog

./: .gitignore  .gitmodules  .lychee.toml  .markdownlint.json  .markdownlint.yaml  .mdlintrc  .pre-commit-config.yaml  .rumdl.toml  AGENTS.md  CLAUDE.md  CNAME  Makefile  Pipfile  README.md  archives.html  authors.html  categories.html  develop_server.sh  index.html  index10.html  index11.html  index12.html  index13.html  index14.html  index15.html  index16.html  index17.html  index18.html  index19.html  index2.html  index20.html  index21.html  index22.html  index23.html  index24.html  index25.html  index3.html  index4.html  index5.html  index6.html  (+14 more)
.claude/: test-command
.github/: dependabot.yml
.mujica/: blog-review.yaml
author/: alexis-metaireau.html  conan-doyle.html  lee-w.html  lee-w10.html  lee-w11.html  lee-w2.html  lee-w3.html  lee-w4.html  lee-w5.html  lee-w6.html  lee-w7.html  lee-w8.html  lee-w9.html  wei-lee.html  wei-lee10.html  wei-lee11.html  wei-lee12.html  wei-lee13.html  wei-lee14.html  wei-lee15.html  wei-lee16.html  wei-lee17.html  wei-lee18.html  wei-lee19.html  wei-lee2.html  wei-lee20.html  wei-lee21.html  wei-lee22.html  wei-lee23.html  wei-lee24.html  wei-lee25.html  wei-lee3.html  wei-lee4.html  wei-lee5.html  wei-lee6.html  wei-lee7.html  wei-lee8.html  wei-lee9.html
category/: 2019.html  android.html  article.html  article2.html  article3.html  article4.html  book.html  book2.html  book3.html  book4.html  book5.html  bot.html  c.html  conference.html  develop.html  draft.html  general.html  git.html  gossiping.html  gossiping2.html  javascript.html  js.html  linux-unix.html  mac.html  paper-summary.html  paper.html  python.html  r.html  tech.html  tech10.html  tech11.html  tech12.html  tech13.html  tech14.html  tech15.html  tech16.html  tech17.html  tech18.html  tech2.html  tech3.html  (+11 more)
content/: places.yaml
drafts/: 2025-01-27-02-03-open-source-report.html  Deep-Learning-Based-Document-Modeling-for-Personality-Detection-from-Text.html  MyST.html  Understanding-Personality-through-Social-Media.html  X-Village-in-the-midle.html  aip-90.html  airflow-2-0.html  clean-architecture.html  computational-advertising.html  coscup-2019.html  cpython-workshop-2025-i-dont-know-how-to-write-python.html  create-a-telegram-bot.html  create-a-telegram-echobot.html  dabble-uv.html  docker-elk.html  dvc-pipeline-versioning.html  dvc-run-experiments.html  euro-python-2020.html  fo-xi-yan-jiu-sheng.html  great-expectations.html  high-output-management.html  how-i-learn-english-recently.html  hows-pycon-us.html  mypy-cache-break-jinj2.html  pitch-anyting.html  pycon-ca-2019.html  pycon-tw-2019-do-you-know-pycon-jp.html  pycon-tw-2020-2021.html  pycontw-2020.html  pyre-check.html  python-table-manner-continuous-integration.html  python-table-manner-debug.html  python-table-manner-dependency-mangement.html  python-table-manner-editor.html  python-table-manner-series.html  python-table-manners-commitizen.html  python-table-manners-cookiecutter.html  replace-constraints-with-uv-lock-mechanisms-for-dev-env-freeze.html  sitcon-2017.html  totally-misunderstand-pelican-config-extra-path-metatdata.html  (+3 more)
extra/: custom.css
feeds/: all.atom.xml  android.atom.xml  article.atom.xml  book.atom.xml  bot.atom.xml  c.atom.xml  conference.atom.xml  develop.atom.xml  general.atom.xml  git.atom.xml  gossiping.atom.xml  javascript.atom.xml  js.atom.xml  linux-unix.atom.xml  paper-summary.atom.xml  paper.atom.xml  python.atom.xml  r.atom.xml  tech.atom.xml  thought.atom.xml  vim.atom.xml
pagefind/: pagefind-entry.json  pagefind.zh-tw_117a9d7078325.pf_meta  pagefind.zh-tw_1273115ce052d.pf_meta  pagefind.zh-tw_12842497f4f37.pf_meta  pagefind.zh-tw_13a01eb5b8362.pf_meta  pagefind.zh-tw_13a45d2f1dece.pf_meta  pagefind.zh-tw_168ce5857bbab.pf_meta  pagefind.zh-tw_176c125b92e74.pf_meta  pagefind.zh-tw_176d2e5daef14.pf_meta  pagefind.zh-tw_18633f2a35b43.pf_meta  pagefind.zh-tw_1a8b2adf0a56f.pf_meta  pagefind.zh-tw_1ac4bd32737ab.pf_meta  pagefind.zh-tw_1af8972f74acd.pf_meta  pagefind.zh-tw_1d8a20e48ca44.pf_meta  pagefind.zh-tw_2113e1ce7dad5.pf_meta  pagefind.zh-tw_27be3541418c4.pf_meta  pagefind.zh-tw_2a19a8f333dc3.pf_meta  pagefind.zh-tw_2abd485157866.pf_meta  pagefind.zh-tw_2ba7eaba1ca4d.pf_meta  pagefind.zh-tw_2d5b18f01fe59.pf_meta  pagefind.zh-tw_2e53a21afc7bd.pf_meta  pagefind.zh-tw_2fd15c606e5ab.pf_meta  pagefind.zh-tw_304812607de36.pf_meta  pagefind.zh-tw_30c66cd941123.pf_meta  pagefind.zh-tw_3155e147e2951.pf_meta  pagefind.zh-tw_32853d9f95a6c.pf_meta  pagefind.zh-tw_389518c81ba5f.pf_meta  pagefind.zh-tw_3aae174914fff.pf_meta  pagefind.zh-tw_3bf7577f28435.pf_meta  pagefind.zh-tw_4029684a9dcbb.pf_meta  pagefind.zh-tw_41cf6be8b7446.pf_meta  pagefind.zh-tw_439e172eee81c.pf_meta  pagefind.zh-tw_44154641a761f.pf_meta  pagefind.zh-tw_46b83833af252.pf_meta  pagefind.zh-tw_4b62fcb0e48ed.pf_meta  pagefind.zh-tw_50a45a6e8efea.pf_meta  pagefind.zh-tw_50d151e2f6f73.pf_meta  pagefind.zh-tw_51fa909cd3f0f.pf_meta  pagefind.zh-tw_53599929bd2e9.pf_meta  pagefind.zh-tw_558aae8ae35ea.pf_meta  (+123 more)
pages/: about-me.html  about-this-blog.html  landing-page-about-hidden.html  more-about-me.html  search.html
plugins/: image_markup.py
scripts/: check_post_metadata.py  exclude-repos.txt  fetch_github_reviews.py  prepare_publication.py
tag/: airflow-210.html  airflow-27.html  airflow-30.html  airflow-31.html  airflow-improvement-proposal.html  airflow-kai-fa-sheng-qing-bao.html  airflow.html  airflow2.html  airflow3.html  airflow4.html  algorithm.html  android.html  animate.html  anime.html  ast.html  autobiography.html  big-five-theory.html  big.html  blog.html  boxing.html  business.html  c.html  career-path.html  chat-bot.html  cicd.html  circleci.html  clean-code.html  code-quality.html  commitizen-tools.html  conference.html  conference2.html  coscup.html  coworking-space.html  cpython.html  creative.html  data.html  (+143 more)
(+8807 files in other folders)
