[tool.poetry]
name = "wei-lee.me"
version = "0.1.0"
description = "Wei Lee's personal blog"
authors = ["Wei Lee <weilee.rx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
cssmin = "^0.2.0"
ghp-import = "^1.0.0"
markdown = "<3.2"
markdown-del-ins = "*"
md_mermaid = {"git" = "https://github.com/Lee-W/md_mermaid"}
pelican = {extras = ["markdown"], version = "^4.8.0"}
pelican-neighbors = "^1.1.0"
pelican-render-math = "^1.0.3"
pelican-seo = "^1.2.2"
pelican-series = "^2.1.0"
pelican-tag-cloud = "^1.0.1"
pelican-webassets = "^2.0.0"
python-gettext = "^4.0"
typogrify = "^2.0.7"
webassets = "^2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
invoke = "^1.4.1"
livereload = "^2.6.3"
mypy = "^0.971"
pre-commit-hooks = "^3.2.0"
ruff = "^0.0.292"


[tool.ruff]
line-length = 88
ignore = [
    "E501",
    "D1",
    "D415",
]

[tool.ruff.isort]
known-first-party = ["commitizen", "tests"]

[tool.ruff.pydocstyle]
convention = "google"


[tool.commitizen]
name = "cz_customize"

[tool.commitizen.customize]
message_template = "{{change_type}}: {{message}}"
example = "post: this is my first post"
schema = "<type>: <body>"
schema_pattern = "^((new post|post update|new draft|draft update|post metadata|typo|config|theme|dependency|static page)): .*"
bump_map = {"break" = "MAJOR", "new" = "MINOR", "fix" = "PATCH", "hotfix" = "PATCH"}
info = "This is commit convention for my blog post"

[[tool.commitizen.customize.questions]]
type = "list"
name = "change_type"
choices = ["new post", "post update", "new draft", "draft update", "post metadata", "typo", "config", "theme", "dependency", "static page"]
message = "What type of commit is it?"

[[tool.commitizen.customize.questions]]
type = "input"
name = "message"
message = "Message body: \n"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
