[project]
name = "main-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "cssmin>=0.2.0",
    "ghp-import>=2.1.0",
    "invoke>=2.2.0",
    "markdown-del-ins>=1.0.0",
    "markdown-mermaidjs>=1.0.0",
    "pelican-featured-image>=1.1.0",
    "pelican-neighbors>=1.2.0",
    "pelican-render-math>=1.0.3",
    "pelican-seo>=1.2.2",
    "pelican-series>=3.0.0",
    "pelican-share-post>=1.1.0",
    "pelican-statistics>=1.0.0",
    "pelican-tag-cloud>=1.0.1",
    "pelican-webassets>=2.0.0",
    "pelican[markdown]>=4.10.1",
    "pillow>=11.0.0",
    "python-gettext>=5.0",
    "typogrify>=2.0.7",
    "webassets>=2.0",
]
[tool.uv]
dev-dependencies = [
    "commitizen>=3.29.1",
    "invoke>=2.2.0",
    "livereload>=2.7.0",
    "pip-audit>=2.7.3",
    "pre-commit-hooks>=5.0.0",
    "ruff>=0.6.9",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["E501", "D1", "D415"]

[tool.ruff.lint.isort]
known-first-party = ["commitizen", "tests"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.commitizen]
name = "cz_customize"

[tool.commitizen.customize]
message_template = "{{change_type}}: {{message}}"
example = "post: this is my first post"
schema = "<type>: <body>"
schema_pattern = "^((new post|post update|new draft|draft update|post metadata|typo|config|theme|dependency|static page)): .*"
bump_map = { "break" = "MAJOR", "new" = "MINOR", "fix" = "PATCH", "hotfix" = "PATCH" }
info = "This is commit convention for my blog post"

[[tool.commitizen.customize.questions]]
type = "list"
name = "change_type"
choices = [
    "new post",
    "post update",
    "new draft",
    "draft update",
    "post metadata",
    "typo",
    "config",
    "theme",
    "dependency",
    "static page",
]
message = "What type of commit is it?"

[[tool.commitizen.customize.questions]]
type = "input"
name = "message"
message = "Message body: \n"
